[package]
name = "pipers"
version = "0.1.0"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2018"
description = "Easily share data between different terminal windows"
homepage = "https://github.com/denisidoro/pipers"
documentation = "https://github.com/denisidoro/pipers"
repository = "https://github.com/denisidoro/pipers"
keywords = ["prometheus", "terminal", "cli"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4.0"

[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std", "unicode-perl"]

[lib]
name = "pipers"
path = "src/lib.rs"

[[bin]]
name = "pipersj"
path = "src/bin/main.rs"
bench = false
